added new project

--- a/index.html
+++ b/index.html
@@ -76,15 +76,80 @@
 								<h2 class="major">Projects</h2>
 
 								<div class="project">
-									<h3 class="project-title">Wellness Whale</h3>
+									<h3 class="project-title">Health Ecosystem</h3>
 									<div class="project-details" style="display: none;">
-										<p>A web-based application that's designed to track your wellbeing through tracking water intake,
-											meditation, moods, and journal entries, all in one convenient progress page.</p>
+										<p>HE</p>
+										<span class="image main">
+											<img src="images/VM_portfolio_screenshots/Landing.png" alt="HE Landing" />
+										</span>
+										<p>Users are prompted to Sign up or Login.</p>
+										<span class="image main">
+											<img src="images/VM_portfolio_screenshots/Signup.png" alt="HE Signup" />
+										</span>
+										<p>Signup using JWT-Authentication.</p>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">KS App</h3>
+									<div class="project-details" style="display: none;">
+										<p>KS</p>
 										<span class="image main">
 											<img src="images/wellness-whale.png" alt="wellness-whale" />
 										</span>
 									</div>
 								</div>
+
+								<div class="project">
+									<h3 class="project-title">Stock Tracker</h3>
+									<div class="project-details" style="display: none;">
+										<p>ST</p>
+										<span class="image main">
+											<img src="images/wellness-whale.png" alt="wellness-whale" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">Wellness Whale</h3>
+									<div class="project-details" style="display: none;">
+										<p>WW</p>
+										<span class="image main">
+											<img src="images/wellness-whale.png" alt="wellness-whale" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">Wesley's Dog Game</h3>
+									<div class="project-details" style="display: none;">
+										<p>WDG</p>
+										<span class="image main">
+											<img src="images/wellness-whale.png" alt="wellness-whale" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">Car Dealership</h3>
+									<div class="project-details" style="display: none;">
+										<p>CD</p>
+										<span class="image main">
+											<img src="images/wellness-whale.png" alt="wellness-whale" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">Shoes & Hats</h3>
+									<div class="project-details" style="display: none;">
+										<p>SNH</p>
+										<span class="image main">
+											<img src="images/wellness-whale.png" alt="wellness-whale" />
+										</span>
+									</div>
+								</div>
+
 
 								<h3>Wellness Whale</h3>
 								<p>A web-based application that's designed to track your wellbeing through tracking water intake,
