--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 								<div class="project">
 									<h3 class="project-title">Health Ecosystem</h3>
 									<div class="project-details" style="display: none;">
+										<p>Live site: <a href="https://remarkable-jalebi-0f1b49.netlify.app/" target="_blank" rel="noopener noreferrer">Visit Here</a></p>
+										<p>Repo: <a href="https://github.com/vmproject1986/VM_project" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
 										<p>Users are prompted to Sign up or Login.</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Landing.png" alt="HE Landing" />
@@ -102,11 +104,10 @@
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Grocerylist.png" alt="HE Grocery List" />
 										</span>
-										<p>Selecting the Food App allows the user to see Grocery Lists, Recipes, or Generate New Lists and Recipes.</p>
+										<p>We are presently collecting feedback as we are deployed and in beta-testing!</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Feedback.png" alt="HE Feedback" />
 										</span>
-										<p>We are presently collecting feedback as we are deployed and in beta-testing!</p>
 									</div>
 								</div>
 
