--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 						<!-- Work -->
 							<article id="work">
+
 								<h2 class="major">Projects</h2>
 
 								<div class="project">
@@ -114,9 +115,30 @@
 								<div class="project">
 									<h3 class="project-title">KS App</h3>
 									<div class="project-details" style="display: none;">
-										<p>KS</p>
+										<p>Repo: <a href="https://github.com/doakmath/ks_project" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p>Users are prompted to Sign up or Login using Auth0 Authentication.</p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/KS_portfolio_screenshots/landing.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/auth0.png" alt="KS signup" />
+										</span>
+										<p>Using PostrgreSQL for persistent data storage, the user can save and track their progress as they make their way through the lessons.</p>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/lessons_1.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/lessons_4.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/videos.png" alt="videos" />
+										</span>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/sound.png" alt="sound" />
+										</span>
+										<p>Using custom state hooks, the replies and comments show up as soon as they are posted.</p>
+										<span class="image main">
+											<img src="images/KS_portfolio_screenshots/message_board.png" alt="message board" />
 										</span>
 									</div>
 								</div>
@@ -171,38 +193,6 @@
 									</div>
 								</div>
 
-
-								<h3>Wellness Whale</h3>
-								<p>A web-based application that's designed to track your wellbeing through tracking water intake,
-									meditation, moods, and journal entries, all in one convenient progress page.
-								</p>
-								<span class="image main"><img src="images/wellness-whale.png" alt="wellness-whale" /></span>
-
-								<h3>Stock Tracker</h3>
-								<p>An app designed to help people track and analyze stocks through various graphic visuals.</p>
-								<span class="image main"><img src="images/stock-tracker.png" alt="stock-tracker" /></span>
-
-								<h3>Wesley's Favorite Doggie Game</h3>
-								<p>A fun game for dog lovers to distinguish their favorite dog.</p>
-								<span class="image main"><img src="images/wesleys-favorite-doggie-game.png" alt="wesleys favorite doggie game" /></span>
-
-								<h3>Moment of Zen</h3>
-								<p>An app that takes a random picture and the Quote of the Day, or random quotes thereafter,
-									and combines them for a thoughtful moment.
-								</p>
-								<span class="image main"><img src="images/moment-of-zen.png" alt="moment of zen" /></span>
-
-								<h3>Car Dealership</h3>
-								<p>An app that allows for the full functioning and tracking of sales personnel and clients, services and
-									service history, and inventory for a car dealership.
-								</p>
-								<span class="image main"><img src="images/car-dealership.png" alt="car-dealership" /></span>
-
-								<h3>Shoes and Hats</h3>
-								<p>An app that allows for the tracking and maintenance of a warehouse size volume of shoes and,
-									you guessed it, hats.
-								</p>
-								<span class="image main"><img src="images/shoes-and-hats.png" alt="shoes and hats" /></span>
 							</article>
 
 
