added WDG and ST

--- a/index.html
+++ b/index.html
@@ -146,9 +146,20 @@
 								<div class="project">
 									<h3 class="project-title">Stock Tracker</h3>
 									<div class="project-details" style="display: none;">
-										<p>ST</p>
+										<p>Repo: <a href="https://gitlab.com/doakmath/stock-tracker" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p>Users can analyze stock data by toggling different graph views, and take specific or general notes.  The calendar permits multiple days of tracking and shows a dot when data is present.</p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/Stock_Tracker_Screenshots/stdashboard.png" alt="ST dashboard" />
+										</span>
+										<span class="image main">
+											<img src="images/Stock_Tracker_Screenshots/stcandlestick.png" alt="candlestick" />
+										</span>
+										<p>Candlesticks, as well as dynamically shifting graphs for zooming in.</p>
+										<span class="image main">
+											<img src="images/Stock_Tracker_Screenshots/steverythingopen.png" alt="everything open" />
+										</span>
+										<span class="image main">
+											<img src="images/Stock_Tracker_Screenshots/stallcandlesticks.png" alt="all candlesticks" />
 										</span>
 									</div>
 								</div>
@@ -156,9 +167,30 @@
 								<div class="project">
 									<h3 class="project-title">Wellness Whale</h3>
 									<div class="project-details" style="display: none;">
-										<p>WW</p>
+										<p>Repo: <a href="https://gitlab.com/beluga-buddies/wellness-whale" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p></p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/wellness_whale_screenshots/wwlanding.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwdashboard.png" alt="KS signup" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwmeditate.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwjournal.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwcheckin.png" alt="videos" />
+										</span>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwprogress.png" alt="sound" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/wellness_whale_screenshots/wwaccount.png" alt="message board" />
 										</span>
 									</div>
 								</div>
@@ -166,9 +198,17 @@
 								<div class="project">
 									<h3 class="project-title">Wesley's Dog Game</h3>
 									<div class="project-details" style="display: none;">
-										<p>WDG</p>
+										<p>Live site: <a href="https://doakmath.github.io/wesleys-dog-game/" target="_blank" rel="noopener noreferrer">Visit Here</a></p>
+										<p>Repo: <a href="https://github.com/doakmath/wesleys-dog-game" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/wesleys_dog_game/wdglanding.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/wesleys_dog_game/wdgplaying.png" alt="KS signup" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/wesleys_dog_game/wdgwinner.png" alt="lessons" />
 										</span>
 									</div>
 								</div>
@@ -202,11 +242,11 @@
 								<form method="post" action="https://formspree.io/f/xrbzevyg">
 									<div class="fields">
 										<div class="field half">
-											<label for="name">Name</label>
+											<label for="name">Your Name</label>
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email">Email</label>
+											<label for="email">Your Email</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
