--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 								<div class="project">
 									<h3 class="project-title">Stock Tracker</h3>
 									<div class="project-details" style="display: none;">
-										<p>Repo: <a href="https://gitlab.com/doakmath/stock-tracker" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p>Repo: <a href="https://gitlab.com/doakmath/stock-tracker" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
 										<p>Users can analyze stock data by toggling different graph views, and take specific or general notes.  The calendar permits multiple days of tracking and shows a dot when data is present.</p>
 										<span class="image main">
 											<img src="images/Stock_Tracker_Screenshots/stdashboard.png" alt="ST dashboard" />
@@ -167,7 +167,7 @@
 								<div class="project">
 									<h3 class="project-title">Wellness Whale</h3>
 									<div class="project-details" style="display: none;">
-										<p>Repo: <a href="https://gitlab.com/beluga-buddies/wellness-whale" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p>Repo: <a href="https://gitlab.com/beluga-buddies/wellness-whale" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
 										<p></p>
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwlanding.png" alt="KS Landing" />
@@ -216,9 +216,30 @@
 								<div class="project">
 									<h3 class="project-title">Car Dealership</h3>
 									<div class="project-details" style="display: none;">
-										<p>CD</p>
+										<p>Repo: <a href="https://gitlab.com/doakmath/car-dealership" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
+										<p></p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/car_dealership/cdlanding.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/car_dealership/cdinventorycreate.png" alt="KS signup" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/car_dealership/cdinventory.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/car_dealership/cdsale.png" alt="lessons" />
+										</span>
+										<span class="image main">
+											<img src="images/car_dealership/cdsalehist.png" alt="videos" />
+										</span>
+										<span class="image main">
+											<img src="images/car_dealership/cdservappt.png" alt="sound" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/car_dealership/cdservhist.png" alt="message board" />
 										</span>
 									</div>
 								</div>
@@ -226,9 +247,16 @@
 								<div class="project">
 									<h3 class="project-title">Shoes & Hats</h3>
 									<div class="project-details" style="display: none;">
-										<p>SNH</p>
+										<p>Repo: <a href="https://gitlab.com/doakmath/shoes-and-hats" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
 										<span class="image main">
-											<img src="images/wellness-whale.png" alt="wellness-whale" />
+											<img src="images/shoes_and_hats/snhlanding.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/shoes_and_hats/snhhat.png" alt="KS signup" />
+										</span>
+										<p></p>
+										<span class="image main">
+											<img src="images/shoes_and_hats/snhshoe.png" alt="lessons" />
 										</span>
 									</div>
 								</div>
