--- a/index.html
+++ b/index.html
@@ -565,6 +565,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 
+		<style>
+			.project-title {
+				cursor: pointer; /* Change cursor to pointer */
+			}
+		</style>
+
 		<script>
 			document.addEventListener("DOMContentLoaded", () => {
 				const projectTitles = document.querySelectorAll(".project-title");
