--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<article id="about">
 							<h2 class="major">About</h2>
 							<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
-							<p>With a rich and diverse background in both psychology and computer programming,
+							<p>With a diverse background in both psychology and computer programming,
 								I bring a unique perspective to the world of software development.
 								My educational journey began at Michigan State University (MSU),
 								 where I delved into the complexities of the human mind, studying psychology.
@@ -68,7 +68,7 @@
 								memory, and how we shape our world through our thoughts.
 								This understanding of human behavior and cognition plays a pivotal role
 								in my approach to software development, particularly in creating user-centric
-								applications</p>
+								applications and designing real-world solutions.</p>
 						</article>
 
 						<!-- Work -->
@@ -81,19 +81,19 @@
 									<div class="project-details" style="display: none;">
 										<p>Live site: <a href="https://remarkable-jalebi-0f1b49.netlify.app/" target="_blank" rel="noopener noreferrer">Visit Here</a></p>
 										<p>Repo: <a href="https://github.com/vmproject1986/VM_project" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
-										<p>Users are prompted to Sign up or Login.</p>
+										<p>JWT Authentication grants a token at login or signup.</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Landing.png" alt="HE Landing" />
 										</span>
-										<p>Users are offered a fun frontend game to play while they wait after signing up or logging in featuring JWT Authentication.</p>
+										<p>Users are offered a fun frontend game to play while they wait.</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Dog_game1.png" alt="HE Dog Game" />
 										</span>
-										<p>The Main Dashboard where users can select which App they want to engage with.  Microservice architecture allows for scalability as several Apps are under construction presently.</p>
+										<p>Microservice architecture allows for scalability as several Apps are under construction presently.</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Dashboard.png" alt="HE Dashboard" />
 										</span>
-										<p>Selecting the Food App allows the user to see Grocery Lists, Recipes, or Generate New Lists and Recipes.</p>
+										<p>Selecting Food and Nutrition allows the user to see Grocery Lists, Recipes, or Generate New Lists and Recipes.</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Food_dashboard.png" alt="HE Food Dashboard" />
 										</span>
@@ -101,9 +101,11 @@
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Generate_list.png" alt="HE Food Form" />
 										</span>
-										<p>Grocery Lists and Recipes can be seen together or separately, and deleted by the user with elegant UI/UX</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Grocerylist.png" alt="HE Grocery List" />
+										</span>
+										<span class="image main">
+											<img src="images/VM_portfolio_screenshots/Recipes.png" alt="HE Food Form" />
 										</span>
 										<p>We are presently collecting feedback as we are deployed and in beta-testing!</p>
 										<span class="image main">
@@ -113,10 +115,27 @@
 								</div>
 
 								<div class="project">
+									<h3 class="project-title">Wesley's Dog Game</h3>
+									<div class="project-details" style="display: none;">
+										<p>Live site: <a href="https://doakmath.github.io/wesleys-dog-game/" target="_blank" rel="noopener noreferrer">Visit Here</a></p>
+										<p>Repo: <a href="https://github.com/doakmath/wesleys-dog-game" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<span class="image main">
+											<img src="images/wesleys_dog_game/wdglanding.png" alt="KS Landing" />
+										</span>
+										<span class="image main">
+											<img src="images/wesleys_dog_game/wdgplaying.png" alt="KS signup" />
+										</span>
+										<span class="image main">
+											<img src="images/wesleys_dog_game/wdgwinner.png" alt="lessons" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
 									<h3 class="project-title">KS App</h3>
 									<div class="project-details" style="display: none;">
 										<p>Repo: <a href="https://github.com/doakmath/ks_project" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
-										<p>Users are prompted to Sign up or Login using Auth0 Authentication.</p>
+										<p>Auth0 Authentication.</p>
 										<span class="image main">
 											<img src="images/KS_portfolio_screenshots/landing.png" alt="KS Landing" />
 										</span>
@@ -168,14 +187,12 @@
 									<h3 class="project-title">Wellness Whale</h3>
 									<div class="project-details" style="display: none;">
 										<p>Repo: <a href="https://gitlab.com/beluga-buddies/wellness-whale" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
-										<p></p>
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwlanding.png" alt="KS Landing" />
 										</span>
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwdashboard.png" alt="KS signup" />
 										</span>
-										<p></p>
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwmeditate.png" alt="lessons" />
 										</span>
@@ -188,27 +205,8 @@
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwprogress.png" alt="sound" />
 										</span>
-										<p></p>
 										<span class="image main">
 											<img src="images/wellness_whale_screenshots/wwaccount.png" alt="message board" />
-										</span>
-									</div>
-								</div>
-
-								<div class="project">
-									<h3 class="project-title">Wesley's Dog Game</h3>
-									<div class="project-details" style="display: none;">
-										<p>Live site: <a href="https://doakmath.github.io/wesleys-dog-game/" target="_blank" rel="noopener noreferrer">Visit Here</a></p>
-										<p>Repo: <a href="https://github.com/doakmath/wesleys-dog-game" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
-										<span class="image main">
-											<img src="images/wesleys_dog_game/wdglanding.png" alt="KS Landing" />
-										</span>
-										<span class="image main">
-											<img src="images/wesleys_dog_game/wdgplaying.png" alt="KS signup" />
-										</span>
-										<p></p>
-										<span class="image main">
-											<img src="images/wesleys_dog_game/wdgwinner.png" alt="lessons" />
 										</span>
 									</div>
 								</div>
@@ -217,14 +215,12 @@
 									<h3 class="project-title">Car Dealership</h3>
 									<div class="project-details" style="display: none;">
 										<p>Repo: <a href="https://gitlab.com/doakmath/car-dealership" target="_blank" rel="noopener noreferrer">View on GitLab</a></p>
-										<p></p>
 										<span class="image main">
 											<img src="images/car_dealership/cdlanding.png" alt="KS Landing" />
 										</span>
 										<span class="image main">
 											<img src="images/car_dealership/cdinventorycreate.png" alt="KS signup" />
 										</span>
-										<p></p>
 										<span class="image main">
 											<img src="images/car_dealership/cdinventory.png" alt="lessons" />
 										</span>
@@ -237,7 +233,6 @@
 										<span class="image main">
 											<img src="images/car_dealership/cdservappt.png" alt="sound" />
 										</span>
-										<p></p>
 										<span class="image main">
 											<img src="images/car_dealership/cdservhist.png" alt="message board" />
 										</span>
@@ -254,7 +249,6 @@
 										<span class="image main">
 											<img src="images/shoes_and_hats/snhhat.png" alt="KS signup" />
 										</span>
-										<p></p>
 										<span class="image main">
 											<img src="images/shoes_and_hats/snhshoe.png" alt="lessons" />
 										</span>
