--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
 								<h2 class="major">Projects</h2>
 
+
 								<div class="project">
 									<h3 class="project-title">Health Ecosystem | Live site: <a href="https://remarkable-jalebi-0f1b49.netlify.app/" target="_blank" rel="noopener noreferrer">Visit Here</a></h3>
 									<div class="project-details" style="display: none;">
@@ -108,6 +109,23 @@
 										<p>We are presently collecting feedback as we are deployed and in beta-testing!</p>
 										<span class="image main">
 											<img src="images/VM_portfolio_screenshots/Feedback.png" alt="HE Feedback" />
+										</span>
+									</div>
+								</div>
+
+								<div class="project">
+									<h3 class="project-title">Health and Wellness Blog | Live site: <a href="https://famous-lily-9413b2.netlify.app/" target="_blank" rel="noopener noreferrer">Visit Here</a></h3>
+									<div class="project-details" style="display: none;">
+										<p>Repo: <a href="https://github.com/healthandwellnessblog369/healthandwellnessblog" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+										<p>A collection of articles and resources around Health and Wellness.  Also features SEO optimization, Google Analytics, Affiliate links, and Adsense once approved.</p>
+										<span class="image main">
+											<img src="images/health_and_wellness_blog/article.png" alt="article" />
+										</span>
+										<span class="image main">
+											<img src="images/health_and_wellness_blog/blogs.png" alt="blogs" />
+										</span>
+										<span class="image main">
+											<img src="images/health_and_wellness_blog/resources.png" alt="resources" />
 										</span>
 									</div>
 								</div>
